# RoboManufac-MCP

./: .cursorrules  .gitignore  README.md  SERVER_PATHS_CFGS.yaml  mcp_config.json  package-lock.json  package.json  pyproject.toml  server.py  test_primitive_access.py  test_publisher.py
aruco-grasp-annotator/: pyproject.toml  setup.py
isaac-sim-mcp/isaac_mcp/: server.py
mcp-client-example/: .gitignore  mcp_config.json  package-lock.json  package.json
mcp-client-example/src/: cli-client.ts  index.ts  model-provider.ts
mcp-server-example/: prompt.py  resource.py
mcp-server-example/data/: fmb_assembly_steps.json
mcp-server-example/resources/: grasp_resource.json  (+2 more)
primitives/: action_libraries.py  control_gripper.py  force_compliant_move_down.py  get_ee_pose.py  grasp_points_publisher.py  ik_solver.py  move_down.py  move_down_yoloe.py  move_home.py  move_to_grasp.py  move_to_place_down.py  move_to_safe_height.py  push.py  push_sim.py  quaternion_orientation_controller.py  reorient_for_assembly.py  translate_for_assembly.py  verify_final_assembly_pose.py  visual_servo copy.py  visual_servo.py  visual_servo_grasp.py  visual_servo_grasp_sim.py  visual_servo_yoloe.py
ros-mcp-server/: .gitignore  README.md  SERVER_PATHS_CFGS.yaml  ros2_env.sh  server.py  test_primitive_access.py
rosbag_record/: rosbag_recorder.py  rosbag_recorder_OLD.py  rosbag_to_mp4.py
src/: bin.ts  cli-client.ts  index.ts  token-counter.ts  tool-manager.ts
todo-list-mcp/: server.py
utils/: websocket_manager.py
yoloe/: prompt_free_test.py  prompt_set_test.py  ros2_yoloe_detector_pf.py
(+49 files in other folders)
