[project]
name = "ros-mcp-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.6.0",
    "opencv-python>=4.8.0",
    "websocket>=0.2.1",
    "websocket-client>=1.8.0",
    "Pillow>=10.0.0",
    "scipy>=1.11.0",
    "typing_extensions>=4.0.0",
    "ultralytics>=8.3.204",
    "numpy<2",
    "clip",
]

[tool.uv.sources]
clip = { git = "https://github.com/ultralytics/CLIP.git" }
